# speaking-meeting-avatar-bot

./: .gitignore  README.md  env.example  pyproject.toml  run.py
agents/case_study_interviewer/: avatar_prompt.txt  config.yaml  voice_id.txt
app/: __init__.py  main.py  models.py  routes.py  webhooks.py  websockets.py
core/: __init__.py  agent_manager.py  bot_state.py  elevenlabs_agent_sync.py  elevenlabs_client.py  instrumentation.py  recall_client.py
prompts/: README.md  animation_prompts.yaml  avatar_from_reference.txt  avatar_from_scratch.txt  expression_from_reference.txt  expression_from_scratch.txt  expression_modifiers.yaml  participant_analysis.txt  single_expression_from_reference.txt  single_expression_from_scratch.txt
static/: admin.html  audio-test.html  index.html
utils/: __init__.py  image_generator.py  logger.py  ngrok.py  prompts.py
